--- a/minesweeper.html
+++ b/minesweeper.html
@@ -41,18 +41,19 @@
         <br>
 
         <div id="howToPlayContainer" class="popup-container popup">
-            <h2>Summary</h2>
-            <div class="container">
+            <button class="collapsible-control">Summary</button>
+            <div class="container collapsible">
                 <p>
                     Controls for chording can be changed in Settings.
                     The speed of the Auto-Solver can also be changed in Settings.
                     Basically check out Settings, and if you have a feature request (or a complaint), then hope that
-                    there's a working contact page.
+                    there's a working contact page or submit an issue on this project's <a
+                        href="https://github.com/qpwoeirut/GamesAndGadgets/issues" target="_blank">GitHub</a>.
                 </p>
             </div>
             <br>
-            <h2>Overview of the Game</h2>
-            <div class="container">
+            <button class="collapsible-control">Overview of the Game</button>
+            <div class="container collapsible">
                 <p>
                     In Minesweeper, there's a grid with some hidden mines in it.
                     The player's job is to open up all the squares, except for the mines.
@@ -62,8 +63,8 @@
                 </p>
             </div>
             <br>
-            <h2>Controls</h2>
-            <div class="container">
+            <button class="collapsible-control">Controls</button>
+            <div class="container collapsible">
                 <p>
                     Left click to open a square.
                     <br>
@@ -74,13 +75,53 @@
                     opens up the remaining adjacent squares.
                     By default, both middle click and double click can be used to chord.
                     This can be changed in Settings.
+                    <br>
+                    Hotkeys are in the works and will hopefully be added later.
                 </p>
             </div>
+            <br>
+            <button class="collapsible-control">Auto-Solver</button>
+            <div class="container collapsible">
+                <p>
+                    There's an Auto-Solver implemented to solve the Minesweeper game for you.
+                    <br>
+                    It's relatively simple, and works pretty quickly.
+                    For aesthetic purposes, it pauses before opening a square or flagging a mine.
+                    This can be changed in settings.
+                    <br>
+                    The hint button performs the same thing, but stops after flagging or opening one square.
+                </p>
+            </div>
+            <br>
+            <button class="collapsible-control">How Auto-Solve Works</button>
+            <div class="container collapsible">
+                <p>
+                    The solver's internal algorithm is pretty simple.
+                    First it checks if any open cell already has all its mines flagged, and opens the remaining adjacent
+                    cells.
+                    Then it checks if any open cell has neighbors that should all be flagged.
+                    Once all these options are exhausted, it starts looking at two-cell patterns.
+                    These patterns are described on the <a href="http://www.minesweeper.info/wiki/Strategy"
+                        target="_blank">Minesweeper Wiki</a>.
+                    They are implemented with Set in JavaScript, using some Set operations I wrote.
+                </p>
+            </div>
+            <br>
+            <button class="collapsible-control">Contact</button>
+            <div class="container collapsible">
+                <p>
+                    This website has a GitHub repository <a
+                        href="https://github.com/qpwoeirut/GamesAndGadgets">here</a>.
+                    In the future, direct email contacts may also be added.
+                    For now, open an issue in the GitHub repository if you have any requests or complaints.
+                </p>
+            </div>
+            <br><br>
             <button type="submit" onclick="closeHowToPlay();">Close</button>
         </div>
 
         <div id="settingsContainer" class="popup-container popup">
-            <h2>Controls</h2>
+            <h3>Controls</h3>
             <div class="container">
                 <label for="useMiddleClick">Use Middle Click to Chord (Open Adjacent Cells)</label>
                 <input id="useMiddleClick" name="useMiddleClick" type="checkbox" checked>
@@ -89,13 +130,13 @@
                 <input id="useDoubleClick" name="useDoubleClick" type="checkbox" checked>
             </div>
             <br>
-            <h2>Auto-Solver</h2>
+            <h3>Auto-Solver</h3>
             <div class="container">
                 <label for="solverPause">Milliseconds Between Solver Moves</label>
                 <input id="solverPause" name="solverPause" type="number" required value="50">
             </div>
             <br>
-            <h2>Difficulty</h2>
+            <h3>Difficulty</h3>
             <div class="container">
                 <button onclick="prefillDifficulty('EASY');">Easy</button>
                 <button onclick="prefillDifficulty('INTERMEDIATE');">Intermediate</button>
@@ -189,6 +230,14 @@
     startGame(game);
 
     window.onkeypress = handleKeyPress;
+
+    const controls = document.getElementsByClassName("collapsible-control");
+    for (const control of controls) {
+        control.addEventListener("click", function (e) {
+            this.classList.toggle("collapsible-open");
+            this.nextElementSibling.classList.toggle("collapsible-show");
+        });
+    }
 </script>
 
 </html>
