remove unnecessary info

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -189,8 +189,7 @@
                         href="http://www.minesweeper.info/wiki/Main_Page" target="_blank">Minesweeper Wiki</a>. The
                     solver's patterns are from <a href="http://www.minesweeper.info/wiki/Strategy"
                         target="_blank">here</a>. The preset difficulties came from <a
-                        href="http://www.minesweeper.info/wiki/Minesweeper_Official_Rules" target="_blank">here</a>. The
-                    beginner preset was taken from the top-left logo, not the text.
+                        href="http://www.minesweeper.info/wiki/Minesweeper_Official_Rules" target="_blank">here</a>.
                 </p>
             </div>
             <br>
