remove useless styles, use em instead of px

--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
         <div class="iconBottomBar"></div>
     </div>
 </div>
-<div id="navbarDropdown" class="floatRight hidden backgroundRed">
+<div id="navbarDropdown" class="floatRight hidden">
     <ul class="displayInlineBlock">
         <li class="displayTr">
             <a href="index.html" target="_parent">
