--- a/snake.html
+++ b/snake.html
@@ -26,5 +26,8 @@
         <h2 style="position: absolute; bottom: 0px; top: 570px; left: 500px; right: 0px;">Score:  <span id="snakeScore"></span></h2>
         <canvas width="400" height="400" id="Snake"></canvas>
         <script src="snake.js"></script>
+        <button style="position: absolute; bottom: 0px; top: 595px; left: 620px; right: 0px; height: 20px; width: 60;" onClick="environment.difficulty = 0;">Easy</button>
+        <button style="position: absolute; bottom: 0px; top: 595px; left: 670px; right: 0px; height: 20px; width: 60;" onClick="environment.difficulty = 1;">Normal</button>
+        <button style="position: absolute; bottom: 0px; top: 595px; left: 733px; right: 0px; height: 20px; width: 60;" onClick="environment.difficulty = 2;">Hard</button>
     </body>
 </html>
