add message telling people to look at Settings

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -19,7 +19,8 @@
 <body>
     <div id="navbarContainer"></div>
     <h1 class="textCenter">Minesweeper</h1>
-
+    <p class="center">Make sure you check out Settings to see what you can change!</p>
+    <br>
     <div id="pageContainer">
         <div id="buttonsContainer" class="button-container container">
             <button id="howToButton" onclick="openHowToPlay();">How To Play</button>
