--- a/minesweeper.html
+++ b/minesweeper.html
@@ -7,6 +7,7 @@
     <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <script src="logger.js"></script>
     <script src="setUtils.js"></script>
     <script src="deque.js"></script>
     <script src="minesweeperUtil.js"></script>
