--- a/snake.html
+++ b/snake.html
@@ -2,32 +2,43 @@
 <html>
     <head>
         <title>Snake</title>
-        <h1 style="position: absolute; top: 0px; left: 10px;">Snake</h1>
-        <a style="position: absolute; top: 65px; left: 10px;" href="index.html">Back to home</a>
         <style>
         html, body {
-            height: 100%;
             margin: 0;
         }
 
-        body {
-            background: white;
+        #gameContainer {
             display: flex;
             align-items: center;
             justify-content: center;
         }
+
         canvas {
             border: 5px solid white;
             background: black;
         }
         </style>
+        <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        <script src="snake.js"></script>
     </head>
     <body onload="loop()">
-        <canvas style="position: relative; left: 100px;" width="400" height="400" id="Snake"></canvas>
-        <script src="snake.js"></script>
-        <h2 style="position: relative; top: 220px; right: 305px;">Score:  <span id="snakeScore"></span></h2>
-        <button style="position: relative; top: 220px; right: 275px; height: 20px; width: 60;" onClick="environment.difficulty = 0;">Easy</button>
-        <button style="position: relative; top: 220px; right: 270px; height: 20px; width: 60;" onClick="environment.difficulty = 1;">Normal</button>
-        <button style="position: relative; top: 220px; right: 265px; height: 20px; width: 60;" onClick="environment.difficulty = 2;">Hard</button>
+        <div id="navbarContainer">
+            
+        </div>
+        <br>
+        <h1 class="center">Snake</h1>
+        <br>
+        <div id="gameContainer">
+            <canvas style="position: relative; left: 100px;" width="400" height="400" id="Snake"></canvas>
+            <h2 style="position: relative; top: 220px; right: 305px;">Score:  <span id="snakeScore"></span></h2>
+            <button style="position: relative; top: 220px; right: 275px; height: 20px; width: 60;" onClick="environment.difficulty = 0;">Easy</button>
+            <button style="position: relative; top: 220px; right: 270px; height: 20px; width: 60;" onClick="environment.difficulty = 1;">Normal</button>
+            <button style="position: relative; top: 220px; right: 265px; height: 20px; width: 60;" onClick="environment.difficulty = 2;">Hard</button>
+        </div>
     </body>
+    <script>
+        $("#navbarContainer").load("navbar.html");
+    </script>
 </html>
