add statuses for games on homepage

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h3>We are planning to create:</h3>
         <ul>
             <li>
-                <p><a href="minesweeper.html">Minesweeper</a></p>
+                <p><a href="minesweeper.html">Minesweeper</a> (Finished)</p>
             </li>
             <li>
-                <p><a href="snake.html">Snake</a></p>
+                <p><a href="snake.html">Snake</a> (Functional but still In Progress)</p>
             </li>
             <li>
-                <p>Conway's Game of Life</p>
+                <p><a href="conwaysGameOfLife.html">Conway's Game of Life</a> (In progress)</p>
             </li>
             <li>
                 <p>Breakout</p>
