--- a/CGoL.html
+++ b/CGoL.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Game of Life</title>
+        <title>Conway's Game of Life</title>
 
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div id="navbarContainer"></div>
+        <div></div>
     </body>
     <script>
         $("#navbarContainer").load("navbar.html");
