--- a/life.html
+++ b/life.html
@@ -7,8 +7,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script src="logger.js"></script>
-        <script src="CGoL.js"></script>
-        <link rel="stylesheet" href="CGoL.css">
+        <script src="life.js"></script>
+        <link rel="stylesheet" href="life.css">
     </head>
     <body>
         <div id="navbarContainer"></div>
