create functional Conway's GoL, but only runs through console

--- a/life.html
+++ b/life.html
@@ -7,6 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script src="logger.js"></script>
+        <script src="grid.js"></script>
         <script src="life.js"></script>
         <link rel="stylesheet" href="life.css">
     </head>
