--- a/minesweeper.html
+++ b/minesweeper.html
@@ -10,6 +10,7 @@
     <script src="logger.js"></script>
     <script src="setUtils.js"></script>
     <script src="deque.js"></script>
+    <script src="grid.js"></script>
     <script src="minesweeperUtil.js"></script>
     <script src="minesweeperPopups.js"></script>
     <script src="minesweeperGame.js"></script>
