add start/stop buttons

--- a/life.html
+++ b/life.html
@@ -19,6 +19,8 @@
                 <canvas id="lifeCanvas">
 
                 </canvas>
+                <button onclick="startGame();">Start</button>
+                <button onclick="stopGame();">Stop</button>
             </div>
         </div>
     </body>
@@ -27,6 +29,6 @@
 
         VERBOSITY = 10;
         var game = new Object();
-        startGame(game);
+        newGame(game);
     </script>
 </html>
