--- a/life.html
+++ b/life.html
@@ -19,8 +19,13 @@
                 <canvas id="lifeCanvas">
 
                 </canvas>
-                <button onclick="startGame();">Start</button>
-                <button onclick="stopGame();">Stop</button>
+                <br>
+                <div id="inputContainer">
+                    <button onclick="startGame();">Start</button>
+                    <button onclick="stopGame();">Stop</button>
+                    <label for="speedInput">Cycles per Second</label>
+                    <input id="speedInput" name="speedInput" type="number" min="1" max="200" value="10">
+                </div>
             </div>
         </div>
     </body>
