update GoL status on homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p><a href="snake.html">Snake</a> (Functional but still In Progress)</p>
             </li>
             <li>
-                <p><a href="life.html">Conway's Game of Life</a> (In progress)</p>
+                <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
             </li>
             <li>
                 <p>Breakout</p>
