replace buttons with single start/stop button

--- a/life.html
+++ b/life.html
@@ -21,15 +21,19 @@
             <canvas id="lifeCanvas">
 
             </canvas>
-            <br>
-            <div id="inputContainer">
-                <button onclick="startGame();">Start</button>
-                <button onclick="stopGame();">Stop</button>
+            <br><br>
+            <div id="inputContainer" class="center">
                 <label for="speedInput">Cycles per Second</label>
                 <input id="speedInput" name="speedInput" type="number" min="1" max="200" value="10">
+                <br><br>
+                <div class="center">
+                    <button id="runButton" class="center" onclick="handleRunClick();">Start</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <br><br><br><br><br>
     <div id="footerContainer">
         <div class="container">
             <h3>Credits</h3>
