add Update Settings button

--- a/life.html
+++ b/life.html
@@ -27,7 +27,8 @@
                 <input id="speedInput" name="speedInput" type="number" min="1" max="200" value="10">
                 <br><br>
                 <div class="center">
-                    <button id="runButton" class="center" onclick="handleRunClick();">Start</button>
+                    <button id="runButton" onclick="handleRunClick();">Start</button>
+                    <button id="updateButton" onclick="updateSettings();">Update Settings</button>
                 </div>
             </div>
         </div>
